@@ -7,7 +7,7 @@
   <groupId>io.clientcore</groupId>
   <artifactId>clientcore-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.0-beta.1</version> <!-- {x-version-update;io.clientcore:clientcore-parent;current} -->
+  <version>1.0.0-beta.2</version> <!-- {x-version-update;io.clientcore:clientcore-parent;current} -->
 
   <name>SDK for Java - Client Libraries</name>
   <description>Parent POM for SDK for Java</description>
@@ -728,13 +728,10 @@
               <arg>-Xlint:try</arg>
               <arg>-Xlint:unchecked</arg>
               <arg>-Xlint:varargs</arg>
-              <arg>-Xlint:-module</arg> <!-- FIXME: this is required for now as it introduces a build failure -->
-              <arg>-Xlint:removal</arg>
-              <arg>-Xlint:-requires-transitive-automatic</arg> <!-- FIXME: this is required for now as it introduces a build failure -->
             </compilerArgs>
 
             <!-- Default is annotation processing being off. -->
-            <proc>${compiler.proc}</proc>
+             <proc>${compiler.proc}</proc>
 
             <createMissingPackageInfoClass>false</createMissingPackageInfoClass>
           </configuration>
@@ -826,7 +823,7 @@
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>3.10.1</version> <!-- {x-version-update;org.apache.maven.plugins:maven-javadoc-plugin;external_dependency} -->
           <configuration>
-            <release>17</release>
+            <source>1.8</source>
             <doctitle>ClientCore SDK for Java Reference Documentation</doctitle>
             <windowtitle>ClientCore SDK for Java Reference Documentation</windowtitle>
             <bottom>Visit the &lt;a href="https://docs.microsoft.com/java/azure/"&gt;Azure for Java Developers&lt;/a&gt; site
@@ -877,7 +874,6 @@
             <testFailureIgnore>false</testFailureIgnore>
             <argLine>
               ${defaultSurefireArgLine}
-              ${javaModulesSurefireArgLine}
               ${additionalSurefireArgLine}
             </argLine>
           </configuration>
@@ -930,7 +926,6 @@
             <testFailureIgnore>false</testFailureIgnore>
             <argLine>
               ${defaultFailsafeArgLine}
-              ${javaModulesFailsafeArgLine}
               ${additionalFailsafeArgLine}
             </argLine>
           </configuration>
@@ -1125,42 +1120,71 @@
   </reporting>
 
   <profiles>
+    <!-- Skip module-info.java on Java 8 -->
     <profile>
-      <id>java-baseline</id>
+      <id>java8</id>
       <activation>
-        <jdk>17</jdk>
+        <jdk>[1.8,9)</jdk>
       </activation>
       <properties>
-        <maven.compiler.release>17</maven.compiler.release>
-        <maven.compiler.testRelease>17</maven.compiler.testRelease>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
       </properties>
       <build>
         <plugins>
+          <!-- Don't compile module-info.java, see java 9+ profile -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.13.0</version> <!-- {x-version-update;org.apache.maven.plugins:maven-compiler-plugin;external_dependency} -->
-            <executions>
-              <execution>
-                <id>default-testCompile</id>
-                <goals>
-                  <goal>testCompile</goal>
-                </goals>
-                <configuration>
-                  <useModulePath>false</useModulePath>
-                </configuration>
-              </execution>
-            </executions>
+            <configuration>
+              <source>1.8</source>
+              <target>1.8</target>
+              <excludes>
+                <exclude>module-info.java</exclude>
+              </excludes>
+              <testExcludes>
+                <testExclude>module-info.java</testExclude>
+              </testExcludes>
+              <testSource>1.8</testSource>
+              <testTarget>1.8</testTarget>
+            </configuration>
+          </plugin>
+          <!-- Avoid errors from module-info -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>3.10.1</version> <!-- {x-version-update;org.apache.maven.plugins:maven-javadoc-plugin;external_dependency} -->
+            <configuration>
+              <sourceFileExcludes>
+                <sourceFileExclude>module-info.java</sourceFileExclude>
+              </sourceFileExcludes>
+            </configuration>
           </plugin>
         </plugins>
       </build>
+      <reporting>
+        <plugins>
+          <!-- Avoid errors from module-info -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>3.10.1</version> <!-- {x-version-update;org.apache.maven.plugins:maven-javadoc-plugin;external_dependency} -->
+            <configuration>
+              <sourceFileExcludes>
+                <sourceFileExclude>module-info.java</sourceFileExclude>
+              </sourceFileExcludes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </reporting>
     </profile>
 
-    <!-- Setup for Java 18+ -->
+    <!-- Setup for Java 9+ -->
     <profile>
-      <id>java-18-plus</id>
+      <id>java9plus</id>
       <activation>
-        <jdk>[18,)</jdk>
+        <jdk>[9,)</jdk>
       </activation>
       <build>
         <plugins>
@@ -1168,6 +1192,13 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.13.0</version> <!-- {x-version-update;org.apache.maven.plugins:maven-compiler-plugin;external_dependency} -->
+            <configuration>
+              <compilerArgs combine.children="append">
+                <arg>-Xlint:-module</arg> <!-- FIXME: this is required for now as it introduces a build failure -->
+                <arg>-Xlint:removal</arg>
+                <arg>-Xlint:-requires-transitive-automatic</arg> <!-- FIXME: this is required for now as it introduces a build failure -->
+              </compilerArgs>
+            </configuration>
             <executions>
               <!-- compile first with VM's default Java version -->
               <!-- this will generate module-info with major class version based on the Java version being used, in CI this should be 61 (i.e Java 17) -->
@@ -1177,23 +1208,40 @@
                   <goal>compile</goal>
                 </goals>
                 <configuration>
-                  <compilerArgs combine.children="append">
-                    <arg>-Xlint:-options</arg> <!-- Needed to compile with Java 20+ -->
-                  </compilerArgs>
                   <release>${java.vm.specification.version}</release>
                 </configuration>
               </execution>
 
-              <!-- then compile with Java 17 as the base version -->
-              <!-- this is the ClientCore baseline for jars that are released to Maven and should only be updated
-              when the ClientCore SDK policy is changed -->
+              <!-- then compile with Java 11 as the base version that supports module-info -->
+              <!-- this is the Azure SDK baseline for jars that are released to Maven and should only be updated
+              when the Azure SDK policy is changed -->
+              <!-- executing this after default-compile will generate module-info with major class version 55 (i.e Java 11) -->
+              <execution>
+                <id>base-modules-compile</id>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+                <configuration>
+                  <release>11</release>
+                  <includes>
+                    <include>module-info.java</include>
+                  </includes>
+                </configuration>
+              </execution>
+              <!-- then compile without module-info for Java 8 -->
               <execution>
                 <id>base-compile</id>
                 <goals>
                   <goal>compile</goal>
                 </goals>
                 <configuration>
-                  <release>17</release>
+                  <compilerArgs combine.children="append">
+                    <arg>-Xlint:-options</arg> <!-- Needed to compile with Java 20+ -->
+                  </compilerArgs>
+                  <release>8</release>
+                  <excludes>
+                    <exclude>module-info.java</exclude>
+                  </excludes>
                 </configuration>
               </execution>
 
@@ -1204,28 +1252,62 @@
                   <goal>testCompile</goal>
                 </goals>
                 <configuration>
-                  <compilerArgs combine.children="append">
-                    <arg>-Xlint:-options</arg> <!-- Needed to compile with Java 20+ -->
-                  </compilerArgs>
                   <release>${java.vm.specification.version}</release>
                   <testRelease>${java.vm.specification.version}</testRelease>
                   <useModulePath>false</useModulePath>
                 </configuration>
               </execution>
 
-              <!-- then compile with Java 17 -->
+              <!-- then compile with Java 8 -->
               <execution>
                 <id>base-testCompile</id>
                 <goals>
                   <goal>testCompile</goal>
                 </goals>
                 <configuration>
-                  <release>17</release>
-                  <testRelease>17</testRelease>
+                  <compilerArgs combine.children="append">
+                    <arg>-Xlint:-options</arg> <!-- Needed to compile with Java 20+ -->
+                  </compilerArgs>
+                  <release>8</release>
+                  <testRelease>8</testRelease>
+                  <testExcludes>
+                    <testExclude>module-info.java</testExclude>
+                  </testExcludes>
                   <useModulePath>false</useModulePath>
                 </configuration>
               </execution>
             </executions>
+          </plugin>
+          <!-- Surefire plugin is broken, https://issues.apache.org/jira/browse/SUREFIRE-1501 -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.5.1</version> <!-- {x-version-update;org.apache.maven.plugins:maven-surefire-plugin;external_dependency} -->
+            <configuration>
+              <argLine>
+                ${defaultSurefireArgLine}
+                ${javaModulesSurefireArgLine}
+                <!-- This is required as the Java 8 based implementation for ReflectionUtils may be loaded by IntelliJ when running tests with later versions of Java. -->
+                <!-- In later versions of Java, java.base doesn't open java.lang.invoke to azurecore, so it needs to be done with this directive. This only affects tests. -->
+                --add-opens java.base/java.lang.invoke=io.clientcore.core
+                ${additionalSurefireArgLine}
+              </argLine>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>3.5.1</version> <!-- {x-version-update;org.apache.maven.plugins:maven-failsafe-plugin;external_dependency} -->
+            <configuration>
+              <argLine>
+                ${defaultFailsafeArgLine}
+                ${javaModulesFailsafeArgLine}
+                <!-- This is required as the Java 8 based implementation for ReflectionUtils may be loaded by IntelliJ when running tests with later versions of Java. -->
+                <!-- In later versions of Java, java.base doesn't open java.lang.invoke to core, so it needs to be done with this directive. This only affects tests. -->
+                --add-opens java.base/java.lang.invoke=io.clientcore.core
+                ${additionalFailsafeArgLine}
+              </argLine>
+            </configuration>
           </plugin>
         </plugins>
       </build>
@@ -1521,6 +1603,43 @@
                       <classifier>changelog</classifier>
                     </artifact>
                   </artifacts>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>test-module-base-compile</id>
+      <activation>
+        <file>
+          <exists>${projectTestSourceDirectory}/module-info.java</exists>
+        </file>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.13.0</version> <!-- {x-version-update;org.apache.maven.plugins:maven-compiler-plugin;external_dependency} -->
+            <executions>
+              <!-- then compile with Java 11 as the base version that supports module-info -->
+              <!-- this is the Azure SDK baseline for jars that are released to Maven and should only be updated
+              when the Azure SDK policy is changed -->
+              <!-- executing this after default-compile will generate module-info with major class version 55 (i.e Java 11) -->
+              <execution>
+                <id>base-modules-testCompile</id>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+                <configuration>
+                  <release>11</release>
+                  <testRelease>11</testRelease>
+                  <testIncludes>
+                    <testInclude>module-info.java</testInclude>
+                  </testIncludes>
                 </configuration>
               </execution>
             </executions>
